feat: auto extract cible profile ID and get attachments type photos

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.facebook.com/*"],
+      "matches": ["https://*.facebook.com/*"],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
@@ -28,7 +28,7 @@
   "web_accessible_resources": [
     {
       "resources": ["injected.js"],
-      "matches": ["https://www.facebook.com/*"]
+      "matches": ["https://*.facebook.com/*"]
     }
   ]
 }
