--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "description": "Extract posts from Facebook profiles",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "host_permissions": [
     "https://www.facebook.com/*",
