--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,14 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "downloads",
+    "tabs"
   ],
   "host_permissions": [
     "https://www.facebook.com/*",
-    "https://*.facebook.com/*"
+    "https://*.facebook.com/*",
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "popup.html",
